medtracker: Use new 1.22 servemux routing properly

--- a/medtracker/webui/uitemplates/BUILD.bazel
+++ b/medtracker/webui/uitemplates/BUILD.bazel
@@ -7,7 +7,7 @@ go_library(
         "createmedication.go",
         "createperson.go",
         "home.go",
-        "listpatients.go",
+        "listpeople.go",
         "login.go",
         "logout.go",
         "recordmedicationrefill.go",
