--- a/.github/workflows/medtracker-deploy.yml
+++ b/.github/workflows/medtracker-deploy.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   deploy-medtracker-manifest:
+    if: "contains(github.event.head_commit.message, 'Deploy-MedTracker: True')"
     runs-on: ubuntu-latest
     permissions:
       contents: 'read'
