--- a/.github/workflows/row-major-web-build.yml
+++ b/.github/workflows/row-major-web-build.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   build-row-major-web:
-    if: "!contains(github.event.head_commit.message, 'COMMIT_TYPE=deploy')"
+    if: "contains(github.event.head_commit.message, 'Build-RowMajorWeb: True')"
     runs-on: ubuntu-latest
     permissions:
       contents: 'read'
