--- a/.github/workflows/row-major-web-deploy.yml
+++ b/.github/workflows/row-major-web-deploy.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   deploy-row-major-manifest:
+    if: "contains(github.event.head_commit.message, 'Deploy-RowMajorWeb: True')"
     runs-on: ubuntu-latest
     permissions:
       contents: 'read'
